[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pubmed-pharma-search"
version = "1.0.0"
description = "A professional tool for searching PubMed papers and identifying those with pharmaceutical or biotech company affiliations"
authors = ["PubMed Pharmaceutical Search Project"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CV016/pubmed-pharma-search"
repository = "https://github.com/CV016/pubmed-pharma-search"
documentation = "https://github.com/CV016/pubmed-pharma-search#readme"
keywords = ["pubmed", "pharmaceutical", "biotech", "research", "papers", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "pubmed_pharma_search"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
pubmed-pharma-search = "pubmed_pharma_search.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CV016/pubmed-pharma-search/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 